add exclamation point

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             We are taking web development to the next level
           </p>
           <p>
-              <a href="#contact" class="btn pure-button pure-button-primary">Learn more</a>
+              <a href="#contact" class="btn pure-button pure-button-primary">Learn more!</a>
           </p>
       </div>
   </div>
