edit team section

--- a/index.html
+++ b/index.html
@@ -89,10 +89,8 @@
           <h2 class="content-head content-head-ribbon">Angel Contreras</h2>
 
           <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor.
+              Self taught Full stack developer concentrating on the MERN Stack. <a href="angelbenoit.github.io">Portfolio</a> includes
+              several full stack and front end (React) projects. Most of his css written by scratch with the help of SCSS.
           </p>
         </div>
 
