add custom styling to header and team section

--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
       </div>
       <div class="content">
         <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-          <img width="250" alt="File Icons" class="pure-img-responsive team-photo" src="src/media/temp.jpg">
+          <img width="250" alt="File Icons" class="pure-img-responsive team-photo" src="src/media/btr.jpg">
         </div>
         <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
 
           <h2 class="content-head content-head-ribbon">Angel Contreras</h2>
 
           <p>
-              Self taught Full stack developer concentrating on the MERN Stack. <a href="angelbenoit.github.io">Portfolio</a> includes
+              Self taught Full stack developer concentrating on the MERN Stack. <a href="https://angelbenoit.github.io" target="blank">Portfolio</a> includes
               several full stack and front end (React) projects. Most of his css written by scratch with the help of SCSS.
           </p>
         </div>
