--- a/bart/index.html
+++ b/bart/index.html
@@ -27,4 +27,4 @@
         }
       }(window.location))
     </script>
-<!-- End Single Page Apps for GitHub Pages --><link rel="manifest" href="./manifest.json"><link rel="shortcut icon" href="./favicon.ico"><title>Bart App</title><link href="./static/css/main.0b88bdd2.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="./static/js/main.5b2f4930.js"></script></body></html>
+<!-- End Single Page Apps for GitHub Pages --><link rel="manifest" href="manifest.json"><link rel="shortcut icon" href="favicon.ico"><title>Bart App</title><link href="static/css/main.0b88bdd2.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="static/js/main.5b2f4930.js"></script></body></html>
