--- a/bart/index.html
+++ b/bart/index.html
@@ -1,4 +1,6 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000">   <script type="text/javascript">
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000">   
+<!-- End Single Page Apps for GitHub Pages --><link rel="manifest" href="./manifest.json"><link rel="shortcut icon" href="./favicon.ico"><title>Bart App</title><link href="./static/css/main.0b88bdd2.css" rel="stylesheet"></head>
+<script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // https://github.com/rafrex/spa-github-pages
       // Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
@@ -27,4 +29,4 @@
         }
       }(window.location))
     </script>
-<!-- End Single Page Apps for GitHub Pages --><link rel="manifest" href="./manifest.json"><link rel="shortcut icon" href="./favicon.ico"><title>Bart App</title><link href="./static/css/main.0b88bdd2.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="./static/js/main.5b2f4930.js"></script></body></html>
+<body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="./static/js/main.5b2f4930.js"></script></body></html>
