--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             We are taking web development to the next level
           </p>
           <p>
-              <a href="#contact" class="btn pure-button pure-button-primary">Learn more!</a>
+              <a href="/ether" class="btn pure-button pure-button-primary">Fund Us!</a>
           </p>
       </div>
   </div>
 
   <div class="content-wrapper">
-    <div class="content">
+    <div class="content company">
       <h2 class="content-head is-center">What we do</h2>
 
       <div class="pure-g">
@@ -67,7 +67,7 @@
         <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
           <h3 class="content-subhead">
               <i class="fa fa-check-square-o"></i>
-              More
+              Services
           </h3>
           <p>
               Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
@@ -127,7 +127,7 @@
 
     </div>
 
-    <div class="content" id="contact">
+    <div class="content contact" id="contact">
       <h2 class="content-head is-center">Get in touch</h2>
 
       <div class="pure-g">
