--- a/ether/index.html
+++ b/ether/index.html
@@ -31,17 +31,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="script.js"></script>
     <script>
+      let provider;
       try {
-        const provider = new ethers.providers.Web3Provider(web3.currentProvider);
-        const signer = provider.getSigner();
-
-        const contribution = document.getElementById('contribution');
-        const contribute = document.getElementById('contribute');
-        const warning = document.getElementById('warning');
-
-        const contract = new ethers.Contract(contractAddress, abi, provider);
-        const contractWithSigner = contract.connect(signer);
-
+        provider = new ethers.providers.Web3Provider(web3.currentProvider);        
       } catch (error) {
         console.log('Please install metamask, or another web3 provider!');
         warning.classList.remove('d-none');
@@ -49,7 +41,13 @@
         contribute.classList.add('d-none');
       }
       
-      
+      const signer = provider.getSigner();
+      const contribution = document.getElementById('contribution');
+      const contribute = document.getElementById('contribute');
+      const warning = document.getElementById('warning');
+
+      const contract = new ethers.Contract(contractAddress, abi, provider);
+      const contractWithSigner = contract.connect(signer);
       const sendContribute = () => {
         contributionValue = parseInt(contribution.value, 10);
 
