--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             We are taking web development to the next level
           </p>
           <p>
-              <a href="/ether" class="btn pure-button pure-button-primary">Fund Us!</a>
+              <a href="/ether" class="btn-lg pure-button pure-button-primary">Fund Us!</a>
           </p>
       </div>
   </div>
