--- a/visionwriter/index.html
+++ b/visionwriter/index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="#umtt">Meet The Team</a>
                     </li>
 					<li class="nav-item">
-                        <a class="nav-link" href="input.html">Input Page</a>
+                        <a class="nav-link" href="aakatev.me">Input Page</a>
                     </li>
                 </ul>
             </div>
@@ -93,7 +93,7 @@
                         <h4 class="service-heading sfyellow">Try It Now</h4>
                         <h5 class="sfgold">Click the button bellow to get started!</h5>
                         <span style="font-size: 100px; color:#32AF37">
-                            <a class="btn btn-primary text-uppercase" href="input.html">go to vision writer</a>
+                            <a class="btn btn-primary text-uppercase" href="aakatev.me">go to vision writer</a>
                         </span>
                     </div>
                 </div>
