--- a/visionwriter/index.html
+++ b/visionwriter/index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="#umtt">Meet The Team</a>
                     </li>
 					<li class="nav-item">
-                        <a class="nav-link" href="aakatev.me">Input Page</a>
+                        <a class="nav-link" href="https://aakatev.me">Input Page</a>
                     </li>
                 </ul>
             </div>
